fix:implemento da rota de busca por id em secretario e edição de senhas em atualizaçoes
