# app/routes/login.py
@@ -1,5 +1,5 @@
 from flask import Blueprint, request, jsonify
-from flask_jwt_extended import create_access_token
+from flask_jwt_extended import create_access_token, get_jwt_identity, jwt_required
 from datetime import timedelta
 from app.models.medico import Medico
 from app.models.secretario import Secretario
@@ -53,4 +53,54 @@ def login():
         "token": access_token,
         "expira_em": "60 minutos"
     }), 200
+
+# Rota para editar a senha do usuário logado
+@login_bp.route('/editar_senha', methods=['PUT'])   
+@jwt_required() 
+def editar_senha():
+    usuario = get_jwt_identity() or {}
+    if not usuario:
+        return jsonify({"erro": "Usuário não identificado ou token inválido."}), 403
+    usuario_id = usuario.get('id')
+    usuario_nivel = usuario.get('nivel_acesso')
     
+    data = request.get_json() or {}
+    
+    if 'senha_atual' not in data or 'nova_senha' not in data:
+        return jsonify({"erro": "Campos obrigatórios faltando. Use: senha_atual, nova_senha."}), 400    
+    
+    nova_senha = data['nova_senha'] 
+    modelos = {
+    "medico": Medico,
+    "secretario": Secretario,
+    "paciente": Paciente
+    }
+
+    Modelo = modelos.get(usuario_nivel)
+
+    if not Modelo:
+        return jsonify({"erro": "Nível de acesso inválido."}), 403
+
+    usuario_obj = Modelo.query.get(usuario_id)
+
+    if not usuario_obj:
+        return jsonify({"erro": "Usuário não encontrado."}), 404
+
+    if usuario_obj.senha != data['senha_atual'] :
+        return jsonify({"erro": "Senha atual incorreta."}), 400 
+    
+    if usuario_obj.senha == nova_senha:
+        return jsonify({"erro": "A nova senha deve ser diferente da senha atual."}), 400  
+      
+    usuario_obj.senha = nova_senha
+    
+    try:
+        db.session.commit()
+        return jsonify({"mensagem": "Senha atualizada com sucesso!"}), 200
+    except Exception as e:
+        db.session.rollback()
+        return jsonify({"erro": f"Erro ao atualizar senha: {str(e)}"}), 500
+
+    
+                    
+        
